--- a/serverFuncs/templates/galleryBACKUP.html
+++ b/serverFuncs/templates/galleryBACKUP.html
@@ -27,9 +27,10 @@
 
   <style>
     .datePopup {
+      z-index:-1;
       position: fixed;
-      right:0;
-      top:85%;
+      right:0%;
+      top:100%;
       min-height:100px;
       min-width:300px;
     }
@@ -57,7 +58,9 @@
       max-height: 500px;
     }
   </style>
+    
     <div id="console"></div>
+
     <div class="buttonIn" style="line-height:1.8">
       <form method="post" enctype="multipart/form-data">
         <input type="text" name=shit style= "float: left; width: 200px;" id="command" placeholder="Command Here">
@@ -70,6 +73,11 @@
     </head>
     <!--<form method="uploadimage"  enctype="multipart/form-data"> -->
     <body>
+    <iframe id="DateShower" class="datePopup">
+      <textarea>
+        I ate my own Pants LOL
+      </textarea>
+    </iframe>
     <div class="div-imageGal" id="imageGal"></div>
       <script type="text/javascript">
 
@@ -85,46 +93,86 @@
 
           const container = document.getElementById('imageGal');
 
-          //log=document.createElement('div');
-          //log.innerHTML=typeof image_array;
+          log=document.createElement('div');
+          //log.innerHTML=image_array;
           //console.appendChild(log);
 
-          for(image of image_array){
+          let arrayOfImageContainers=[];
 
-            imageContainer=document.createElement('div');
-            imageContainer.className="widgetContent";
-            imageContainer.id=image;
+          async function observedFunction(objects,observer){
 
-            image=imageContainer.id.replace(',','');
-;
-            if( image.split('.')[1].toUpperCase() === 'MP4'){
+            objects.forEach((object)=>{
+
+              targetElement=object.target;
+
+              if(object.isIntersecting){
+
+                image=targetElement.id;
+                //imageElement=targetElement.getElementsByTagName("*").namedItem("imageAddress");
+                //image=imageElement.innerHTML;
+                //log.innerHTML=images;
+                //console.appendChild(log);
+
+                image=image.replace(',','');
+                if( image.split('.')[1].toUpperCase() === 'MP4'){
                   source=document.createElement('source');
                   source.type="video/mp4";
                   source.src="{{url_for('imageShake',filename='ADDSTRING')}}".replace('ADDSTRING', image);
                   vid=document.createElement('video');
                   vid.classList.add("imageRules");
-                  vid.rotate="90";
-                  vid.controls=true;
-                  vid.preload='none';
+                  vid.rotate="90"
+                  vid.controls=' '
+                  vid.preload='auto';
                   vid.id='content';
-                  vid.poster="{{url_for('getThumbnail',filename='ADDSTRING')}}".replace('ADDSTRING', image);
                   vid.append(source);
-                  imageContainer.appendChild(vid);
-            }else{
+                  targetElement.appendChild(vid);
+                }else{
                   img=document.createElement('img');
                   img.classList.add("imageRules");
                   img.id='content';
-                  img.loading='lazy';
                   img.src = "{{url_for('imageShake',filename='ADDSTRING')}}".replace('ADDSTRING', image);
-                  imageContainer.appendChild(img);
+                  targetElement.appendChild(img);
                 };
 
+              }else if(!object.isIntersecting){
+
+                try{
+                  targetElement.firstChild.remove();
+                }
+                catch(e){};
+
+              };
+
+            });
+
+          };
+
+          for(const image of image_array){
+
+            imageContainer=document.createElement('div');
+            imageContainer.className="widgetContent";
+            imageContainer.id=image;
             container.appendChild(imageContainer);
+            arrayOfImageContainers.push(imageContainer);
+
+          };
+
+          observerOptions={
+            root: document.querySelector("#scrollArea"),
+            rootMargin:"0px",
+            threshold:0.01,
+            delay:100,
+          };
+
+          const observer = new IntersectionObserver(observedFunction, observerOptions);
+
+          for(const child of arrayOfImageContainers){
+
+            observer.observe(child);
 
           };
         }
       </script>
       <noscript>Sorry, your browser does not support JavaScript!</noscript>
     </body>
-    <div id="dateShower" class="datePopup"></div>
   </form>
