Set up JQuery, not implementing yet.

--- a/serverFuncs/templates/gallery.html
+++ b/serverFuncs/templates/gallery.html
@@ -71,6 +71,7 @@
     <!--<form method="uploadimage"  enctype="multipart/form-data"> -->
     <body>
     <div class="div-imageGal" id="imageGal"></div>
+    <script src="{{url_for('getJQuery', filename='jquery-3.7.1.min.js')}}"></script>
       <script type="text/javascript">
 
         const console=document.getElementById('console');
